# FaceRecognition

./: CMakeLists.txt  README.md  filter_trim.py  main.cpp  process.py  renamer.py
eigen/: eigen.cpp
fisher/: fisher.cpp
lbph/: lbph.cpp
utils/: db_gen.cpp  fcns.cpp  validating_fcns.cpp  validator.cpp
